- Synchronize will act as an anonymous client if empty values are provided
  as the AWS access and secret keys. When the S3 connection is anonymous, only 
  public buckets will be accessible.
- Fixed a bug that prevented Synchronize from recognizing duplicate file names
  when uploading to an S3 subdirectory path when using the --batch option.  


TOOLKIT

  * General

- Added initial implementation of CloudFront service.
- Added property "cloudfront-service.internal-error-retry-max" for defining the
  retry limit for CloudFront internal service errors.
- Improved support for accessing S3 using DevPay credentials with a new
  credentials class for defining and storing these credentials: 
  AWSDevPayCredentials
- Added a class (AWSDevPayProduct) to represent a DevPay product, and to load 
  information about pre-defined products from the properties file 
  devpay_products.properties.
- Improved the interpretation of .jets3t-ignore files so that child paths or
  arbitrary paths can be specified and ignored. For example, to ignore all CVS
  directories you can now add a single ignore path at the top level: **/CVS

  * REST Implementation

- Added support for proxy authentication settings in jets3t.properties:
  "proxy-user", "proxy-password", and "proxy-domain"
- The service's HTTP proxy settings can be updated an reapplied on-demand using
  a range of #initHttpProxy methods.
- The HttpConnectionManager and HttpClient objects used by the REST service can
  now be reinitialised on-demand using the #initHttpConnection method.
- The underlying HttpClient and HttpConnectionManager objects can be accessed 
  to provide greater control and flexibility after a service is created.
- The automatic time adjustment performed in response to RequestTimeTooSkewed
  errors will now work through proxies.

KUDOS TO:

David Kavanagh for sample code that helped improve HTTP proxy support and 
configurability.

Nikolas Coukouma of Zmanda Inc. for patches to significantly improve support