@@ -33,6 +33,8 @@ s3service.stream-retry-buffer-size=131072
 s3service.internal-error-retry-max=5
 s3service.default-bucket-location=US
 s3service.s3-endpoint=s3.amazonaws.com
+s3service.s3-endpoint-http-port=80
+s3service.s3-endpoint-https-port=443
 s3service.disable-dns-buckets=false
 
 #s3service.ignore-exceptions-in-multi=false
